test-ingress.yaml
kind: Pod
apiVersion: v1
metadata:
  name: app-1
  labels:
    app: app-1
spec:
  containers:
    - name: app-1
      image: hashicorp/http-echo:0.2.3
      args:
        - "-text=Executando APP-1"

---

kind: Pod
apiVersion: v1
metadata:
  name: app-2
  labels:
    app: app-2
spec:
  containers:
    - name: app-2
      image: hashicorp/http-echo:0.2.3
      args:
        - "-text=Executando APP-2"

---

kind: Service
apiVersion: v1
metadata:
  name: app1-service
spec:
  selector:
    app: app-1
  ports:
    - port: 5678

---

kind: Service
apiVersion: v1
metadata:
  name: app2-service
spec:
  selector:
    app: app-2
  ports:
    - port: 5678

---

apiVersion: networkingk8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/app1"
        backend:
          service:
            name: app1-service
            port:
              number: 5678
            - pathType: Prefix
              path: "/app2"
              backend:
                service:
                  name: app2-service
                  port:
                  number: 5678
